another ctct form

--- a/Candidates.html
+++ b/Candidates.html
@@ -93,7 +93,7 @@
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ifvijhxQCaQ74M51F3Hu2Y2mi+cu9YsnF4IWqo4gy0+gn1F1hQBILO+XleCFcoyZ+TlLRZWlcnlkX832B8CC5fiqZk3iIeSL3dQ6CsOaFp6BbyggvopWC4FujTYfbV72" data-form-email="true">
+                    <input type="hidden" value="PoT/3lCHouTCQyedZXiPqzBWe1eEPBqRcC3MBd0JsMumfpfziRUz8TWfI128CUjKvRxnaZfw+/PW/lw/QqUX6VLSezfEddZ1Rfovzz0Y/zqutj0IzU3ynZ3vEVdBznDs" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
@@ -103,6 +103,39 @@
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
                     <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
+                <span class="gdpr-block">
+<label>
+<span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
+</label>
+</span></form>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section-small" id="form1-1y" data-rv-view="216" style="background-color: rgb(255, 255, 255); padding-top: 4.5rem; padding-bottom: 4.5rem;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2" data-form-type="formoid">
+                <h2 class="mbr-section-title display-3 text-xs-center">Contact Form</h2>
+
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
+                <form action="https://mobirise.com/" method="post" data-form-title="Contact Form">
+                    <input type="hidden" value="k6H1ZqjU9K/fPGOm8oDCa+pGzSF3YE7MaLxvyyqcbesd/xzOR8mJqkL9q9P0zzPPRxm5ciZUSXy869vuyPONoBIH/jKY8oVhgH9p18V5f0tC8o8z2fPhIm/HFVTbWmYx" data-form-email="true">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="email" required="" placeholder="Email*" data-form-field="Email">
+                    </div>
+                    <div class="form-group">
+                        <input type="tel" class="form-control" name="phone" placeholder="Phone" data-form-field="Phone">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="message" rows="7" placeholder="Message" data-form-field="Message"></textarea>
+                    </div>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-secondary-outline">Contact Us</button></div>
                 <span class="gdpr-block">
 <label>
 <span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
