--- a/index.html
+++ b/index.html
@@ -173,11 +173,7 @@
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
                     <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
-                <span class="gdpr-block">
-<label>
-<span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
-</label>
-</span></form>
+               </form>
             </div>
         </div>
     </div>
