--- a/Candidates.html
+++ b/Candidates.html
@@ -91,7 +91,7 @@
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="Contact Form">
-                    <input type="hidden" value="ggWkVE7HSDjX6oim4Mon7LVFc2ejtJQSO74e6ayDxUY4WqbEAIEIoR0jWRqmSZhRgKPhwRPOqMYg3NWSWGCHYKmWjwLvIjAnfy55q9KGrfv9j2JzM6sy0Rur5dnNehJz" data-form-email="true">
+                    <input type="hidden" value="fg0Qb8hwthyWlqrv4sG5O2VEHpQRxgBiH0Y5perR5sft0yGfGDFfDKFLW+kaVCxCR+hHXKDufvTDAVOoUDb+CXsQ7udDPAsDT97nGKIhq+g9jgtzbUFBzNrdSm0SoYzt" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                     </div>
@@ -127,7 +127,7 @@
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="nh8BLHAknPEVjtZGcgCOxq5KXk5yx/QOtpgt/dAOuHfNrLTMWPjrhR2tk1E7fzaR/M1G8Pux+jrD7XLvFTOi7Lyj1Aa/INdduejG4t2hxeKfhBx8K7ueGA9QLVvfDwmh" data-form-email="true">
+                    <input type="hidden" value="W7EFhG2h1x7p0A1w9LXWKcR2Zv9nFUcUDWSMVvKHmcfIQuxafs1jYFwS/ywTmR/l49Mb7NwWpi1Kr/+ndho5owmig7UApSSep4jv1P4J0NTwcwFq1yB6Ii5qkXpisyna" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
@@ -136,7 +136,7 @@
                     <div class="form-group">
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
-                    <div class="text-xs-right"><button type="submit" class="btn btn-black">Contact Us</button></div>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
                 <span class="gdpr-block">
 <label>
 <span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
