--- a/Project-hires.html
+++ b/Project-hires.html
@@ -94,7 +94,7 @@
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="ItqJ8/4MeQ5thRpnLGSUuT14Xr5MAj5A4o82GIJNwBFLwbt7YDd5hegn8KZL7V7sEsbt0V+RfLqwHDT3MV+QFfZ4gCeB3eInh9CcJyXsVbDyNyGaGUGgSsB3W5oQTTo2" data-form-email="true">
+                    <input type="hidden" value="BlLtuYeQv+sMJCWLtxT7K3wIV1aBQ//kO+tUfCgOp1c4R+Ort2S4uD8zz1JuTb8RrwrJl1cy/tDVd0JM60YBrbHblEy9O97h7r1YIAMQlXflnGRs0bodj36wgX4baOiI" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
@@ -103,7 +103,7 @@
                     <div class="form-group">
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
-                    <div class="text-xs-right"><button type="submit" class="btn btn-black">Contact Us</button></div>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
                 <span class="gdpr-block">
 <label>
 <span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
