--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="3O59VfFmIUpeZdsp1C9jizE6mmOf6owWGpF8tR5iUTpD/2z8x+Ew+jchu9yVaSA/J0WAAYBcr5I6cUh2tDmk4RdR9OMdvRyEuQDg7WM6+uuFifPFnxxTBR5BSeAQfpIP" data-form-email="true">
+                    <input type="hidden" value="OcqJIAt7eDZN0XRm0TIhYc4PyQRQUx4rTEkCLLN1buUk39gntKxcUkiPsaxmdgSxNb5XSZ3WWCuM67EVC9S4qvdhB43ZYrPk1JlyA+gq9A3z4hQl4R3+7XT5U5bbim/m" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
@@ -173,12 +173,8 @@
                     <div class="form-group">
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
-                    <div class="text-xs-right"><button type="submit" class="btn btn-black">Contact Us</button></div>
-                <span class="gdpr-block">
-<label>
-<span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
-</label>
-</span></form>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
+                </form>
             </div>
         </div>
     </div>
