--- a/Perm-hires.html
+++ b/Perm-hires.html
@@ -94,7 +94,7 @@
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TdhwmPYJ5eOeEJO291Jb0F8xxl3uL1X8TigdH8Nv1yhdtgA9fKSB9E3fnfmPuheno6C/u87mCAJhu281PL8VbHULxJ6CYIwz3UVTflyXT5jBCkG/SMnUSuzAZXCetN1w" data-form-email="true">
+                    <input type="hidden" value="gHgHHPWM8Zy1Pb/6TCsjdcYxO4N+Z0LtrKgPb4KMUWF7fNbmO2t2KTobPvRmvgxYkD1u2EAseiT6f/qG316QNyzIl3IB06fEpyHDtI4NhREJQBFLweYIQ3rr/214aB+H" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
@@ -103,7 +103,7 @@
                     <div class="form-group">
                         <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
-                    <div class="text-xs-right"><button type="submit" class="btn btn-black">Contact Us</button></div>
+                    <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
                 <span class="gdpr-block">
 <label>
 <span class="textGDPR" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-input" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
