--- a/Executive-search.html
+++ b/Executive-search.html
@@ -37,7 +37,7 @@
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="page6.html">Candidates</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="Candidates.html#header4-1s">Candidates</a></li></ul>
         </div>
     </div>
 </nav>
@@ -51,7 +51,7 @@
 
                     <h1 class="mbr-section-title display-1">Executive Search</h1>
                     <p class="lead">Head hunting MBB (McKinsey, Bain &amp; BCG) talent for hard-to-place job roles.</p>
-                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Executive-search.html#contacts3-1i">Hire with us</a> </div>
+                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Executive-search.html#contacts3-22">Hire with us</a> </div>
                 </div>
             </div>
         </div>
@@ -91,9 +91,9 @@
             </div>
             <div class="col-xs-12 col-md-3"><strong>Links</strong><ul><li><a href="Executive-search.html#header4-t" class="text-info">Executive Search</a></li><li><a href="Perm-hires.html#header4-10" class="text-info">Permanent Hires</a></li><li><a href="Project-hires.html#header4-16" class="text-info">Project Hires</a></li><li><a href="Candidates.html#header4-1s" class="text-info">Candidates</a></li></ul></div>
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
-                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We should get notification shortly. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="k6EztdnMQ9R3DUKerkr/c8XjM/cUp2paOnDeU+0UrYfYZ1E3nJ1TDdlTj4VqIY3lwiv4ysWBaIB4RhD7EokiI7lfj6Lix911AKfawrlfhPaEaIKpKiJBAt9kJ3fAB1VZ" data-form-email="true">
+                    <input type="hidden" value="23ZnOl3vOxjy7nni4Sw6+MmnepxtfszZEbqy9ldFJBj8BQib5fI6KPVVK21sZ5RMMd415Jej/jaTg9EhXBSTkUJGByEDC5SzQu9U3hjYUK4VqbHTjhoSIYJGR+v7iwc3" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
