--- a/Perm-hires.html
+++ b/Perm-hires.html
@@ -38,7 +38,7 @@ You've come to the right place.">
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="page6.html">Candidates</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="Candidates.html#header4-1s">Candidates</a></li></ul>
         </div>
     </div>
 </nav>
@@ -52,7 +52,7 @@ You've come to the right place.">
 
                     <h1 class="mbr-section-title display-1">Permanent Hires</h1>
                     <p class="lead">Need one or more permanent hires with an MBB (McKinsey, Bain and BCG) background? <br>You've come to the right place.</p>
-                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Perm-hires.html#contacts3-1i">Hire with us</a> </div>
+                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Perm-hires.html#contacts3-22">Hire with us</a> </div>
                 </div>
             </div>
         </div>
@@ -92,9 +92,9 @@ You've come to the right place.">
             </div>
             <div class="col-xs-12 col-md-3"><strong>Links</strong><ul><li><a href="Executive-search.html#header4-t" class="text-info">Executive Search</a></li><li><a href="Perm-hires.html#header4-10" class="text-info">Permanent Hires</a></li><li><a href="Project-hires.html#header4-16" class="text-info">Project Hires</a></li><li><a href="Candidates.html#header4-1s" class="text-info">Candidates</a></li></ul></div>
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
-                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We should get notification shortly. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="JNa1NSa4KsVHnEs1gQpIeoI2FrobDjZAE/7lodWZsMDXBuyGWIhnijwxkZS4fC4FGm9V8h0rpBo2YMRra2qbCEerxvEbJD+xbX4LKdhUYega1mf0SZ5JM1QoW5rs2k+k" data-form-email="true">
+                    <input type="hidden" value="e9g1mqA5BttNLNc8O5ZgFem+yW0ZI7ZUw8gBz56dwmqJxS25GvcmohhY86qWgd++bCSiwlH8dGnOgz3nwH5RM2m78olw1fRo4ndSvoEwjHn41IyIdwEIliwdXVeh6AvC" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
