--- a/Project-hires.html
+++ b/Project-hires.html
@@ -37,7 +37,7 @@
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="page6.html">Candidates</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="Candidates.html#header4-1s">Candidates</a></li></ul>
         </div>
     </div>
 </nav>
@@ -51,7 +51,7 @@
 
                     <h1 class="mbr-section-title display-1">Project Hires</h1>
                     <p class="lead">Got a project starting soon and need to deploy a new team with an MBB background? <br>Get in touch, let's discuss your needs.</p>
-                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Project-hires.html#contacts3-1i">Get in touch</a> </div>
+                    <div class="mbr-buttons--left"><a class="btn btn-lg btn-info" href="Project-hires.html#contacts3-22">Get in touch</a> </div>
                 </div>
             </div>
         </div>
@@ -91,9 +91,9 @@
             </div>
             <div class="col-xs-12 col-md-3"><strong>Links</strong><ul><li><a href="Executive-search.html#header4-t" class="text-info">Executive Search</a></li><li><a href="Perm-hires.html#header4-10" class="text-info">Permanent Hires</a></li><li><a href="Project-hires.html#header4-16" class="text-info">Project Hires</a></li><li><a href="Candidates.html#header4-1s" class="text-info">Candidates</a></li></ul></div>
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
-                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We should get notification shortly. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="zKkWO8o7TK/+vVcidaMTCs5AG1yZ7JqapjHDotayg5aTKkZMQPlFgf+0FjrMNR6iUOj332rjP8PpVV5cbGMQ+Ct1ZkapPtjDhE3SVlkCO6bgqXC8gwG//hFUVCKEhsP6" data-form-email="true">
+                    <input type="hidden" value="1hjQC0G/8tZMnk2dyg5M8bryrMH0rNsWJIiA6HE9G0/SPpu6OiX8isqN7Q7eF3f+hXIeW2EQzwRR2YzHiPaJVIcq1Lv42uwXR9tcqoseVLdXrSDpOCo8aWCb/hdgJvvp" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
