--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ We offer Executive Search, Project and Perm Hires for entities seeking MBB talen
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="page6.html">Candidates</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="Candidates.html#header4-1s">Candidates</a></li></ul>
         </div>
     </div>
 </nav>
@@ -166,9 +166,9 @@ We offer Executive Search, Project and Perm Hires for entities seeking MBB talen
             </div>
             <div class="col-xs-12 col-md-3"><strong>Links</strong><ul><li><a href="Executive-search.html#header4-t" class="text-info">Executive Search</a></li><li><a href="Perm-hires.html#header4-10" class="text-info">Permanent Hires</a></li><li><a href="Project-hires.html#header4-16" class="text-info">Project Hires</a></li><li><a href="Candidates.html#header4-1s" class="text-info">Candidates</a></li></ul></div>
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
-                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We should get notification shortly. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
+                <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="wb4K/Naxl97zeRneDsCcsgt0EGUlpVR/+E4P2aahf4x6Bv4NDsj+ASm/Y4nOab8GHkJIjLZdYYShnHwZ5zGOzErX+B6qExe2qk0HQBfaL82H4GlaX1lb1O8ow8paBK5z" data-form-email="true">
+                    <input type="hidden" value="mFJg9RP3asAq4Xg0DLYwk2Rk+ibvPJHcGYtZCGXSv50vXYWb6nxrRTYle/AU3U82zVbvcqgTAMVMGBURPr8+wOX7XLcHbc5GPz9ZevqYyo47+2gM0oa/xWuipNJpuzf7" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
