--- a/policy.html
+++ b/policy.html
@@ -36,7 +36,7 @@
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="page6.html">Candidates</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link" href="Executive-search.html">Executive Search</a></li><li class="nav-item"><a class="nav-link" href="Perm-hires.html">Permanent Hires</a></li><li class="nav-item"><a class="nav-link" href="Project-hires.html">Project Hires</a></li> <li class="nav-item"><a class="nav-link" href="Candidates.html#header4-1s">Candidates</a></li></ul>
         </div>
     </div>
 </nav>
