--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.png">
   <meta property="og:image" content="assets/images/index-meta.png">
-  <meta name="twitter:title" content="MBB Talent | Exit Opps for experienced pros | Executive Search, Project and Perm Hires for entities seeking consultants">
+  <meta name="twitter:title" content="MBB Talent | Exit Opps for experienced pros | Executive Search, Project and Perm Hires">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/favicon-mbb-talent-new-01-128x128.png" type="image/x-icon">
   <meta name="description" content="We find talent exit opps and get the convos started.
 We offer Executive Search, Project and Perm Hires for entities seeking specific talent.">
   
   
-  <title>MBB Talent | Exit Opps for experienced pros | Executive Search, Project and Perm Hires for entities seeking consultants</title>
+  <title>MBB Talent | Exit Opps for experienced pros | Executive Search, Project and Perm Hires</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&subset=latin,cyrillic">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700&subset=latin,vietnamese,latin-ext">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -169,7 +169,7 @@ We offer Executive Search, Project and Perm Hires for entities seeking specific 
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Par0oTHig7QKFBJmjWclCJMw2QHec/18fYyM96nz2iCCduWu8oEcjmWNGoaVlt2L1/vmyymCCU2ZJ5Nq+OdHg+I9NK1u8QYkmbtJ4Yhq6bC57ub0R92KLCk706A5YMN0" data-form-email="true">
+                    <input type="hidden" value="qZVVcB5+5PzydbU0nyGU/1DW/VDuJjQadzJ27En4a6VC9O6nrdNSNE0a+J+RFK/TMzYiRGEYrQIfMlxmLVKDQfcksejl7JY/EC0oUtlm3v7jsVyPvfzI6UYQD+8II0xY" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
