--- a/Project-support.html
+++ b/Project-support.html
@@ -95,14 +95,14 @@ Get in touch, let's discuss your needs.">
             <div class="col-xs-12 col-md-6" data-form-type="formoid">
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for your message. We anticipate a response within 48h. Usually it's much quicker than that.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="a8Nc7LLAYwiyBHlBOV2hpYsza1aSo2cUUmVzOqvJoJnILtv8sBva+wXux2TSvOuCiibBjgZ76pKMh0ctg4THRA8ySzD1sNLCtqRrfV2eOncK8cd7/SBCiNxJUt64ddIX" data-form-email="true">
+                    <input type="hidden" value="pjl0Aat4T3ufeSSg7xLF3T06hFf/VulKU3PBc8mRs2WdKfPdNRJoAqGxMrWs9gfd77Q6pPrElCYIZl9tvhN6lwpLCcVh9ppbg6My7hl5WVzjbS60Az3OWLIRw+DbpPpu" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
                     </div>
                     
                     <div class="form-group">
-                        <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message (please incl. a shared link to your CV/JD)" data-form-field="Message"></textarea>
+                        <textarea class="form-control input-sm input-inverse" name="message" rows="4" placeholder="Message" data-form-field="Message"></textarea>
                     </div>
                     <div class="text-xs-right"><button type="submit" class="btn btn-info">Send</button></div>
                 </form>
